name:                esqueleto-postgis
version:             1.2.0.0
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -O2 -Wall
  default-language:    Haskell2010
  build-depends:       base >=4.12 && <4.13
                     , esqueleto >=2.6.0 && <2.7
                     , geos >=0.2.2 && <0.3
                     , persistent-postgis >=1.2 && <1.3
  exposed-modules:     Database.Esqueleto.Postgis.Geography
